# ktp-contact-list

./: .gitignore  .gitmodules  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  Messages.sh  abstract-contact-delegate.cpp  abstract-contact-delegate.h  abstract-tree-item.cpp  abstract-tree-item.h  account-button.cpp  account-button.h  account-buttons-panel.cpp  account-buttons-panel.h  account-filter-model.cpp  account-filter-model.h  account-item.cpp  account-item.h  accountbutton.cpp  accountbutton.h  accountfiltermodel.cpp  accountfiltermodel.h  accounts-list-model.cpp  add-contact-dialog.cpp  add-contact-dialog.h  add-contact-dialog.ui  add-contact-job.cpp  add-contact-job.h  add-contacts-to-group-job.cpp  add-contacts-to-group-job.h  add-meta-contact-job.cpp  add-meta-contact-job.h  avatar-button.cpp  avatar-button.h  config.h.cmake  contact-delegate-compact.cpp  contact-delegate-compact.h  contact-delegate-overlay.cpp  contact-delegate-overlay.h  contact-delegate.cpp  (+89 more)
cmake/modules/: FindKTelepathy.cmake  FindTelepathyQt4.cmake
dialogs/: add-contact-dialog.cpp  add-contact-dialog.h  add-contact-dialog.ui  advanced-presence-dialog.cpp  advanced-presence-dialog.h  contact-info.cpp  contact-info.h  contact-info.ui  custom-presence-dialog.cpp  custom-presence-dialog.h  join-chat-room-dialog.cpp  join-chat-room-dialog.h  join-chat-room-dialog.ui  remove-contact-dialog.cpp  remove-contact-dialog.h
icons/: CMakeLists.txt
models/: account-filter-model.cpp  account-filter-model.h
nie/: CMakeLists.txt
ontologies/: CMakeLists.txt
po/ar/: ktp-contactlist.po
po/bs/: ktp-contactlist.po
po/ca/: ktp-contactlist.po
po/ca@valencia/: ktp-contactlist.po
po/cs/: ktp-contactlist.po
po/da/: ktp-contactlist.po
po/de/: ktp-contactlist.po
po/el/: ktp-contactlist.po
po/en_GB/: ktp-contactlist.po
po/es/: ktp-contactlist.po
po/et/: ktp-contactlist.po
po/eu/: ktp-contactlist.po
po/fi/: ktp-contactlist.po
po/fr/: ktp-contactlist.po
po/ga/: ktp-contactlist.po
po/gl/: ktp-contactlist.po
po/hu/: ktp-contactlist.po
po/ia/: ktp-contactlist.po
po/it/: ktp-contactlist.po
po/ja/: ktp-contactlist.po
po/ka/: ktp-contactlist.po
po/kk/: ktp-contactlist.po
po/km/: ktp-contactlist.po
po/ko/: ktp-contactlist.po
po/lt/: ktp-contactlist.po
po/mr/: ktp-contactlist.po
po/nb/: ktp-contactlist.po
po/nds/: ktp-contactlist.po
po/nl/: ktp-contactlist.po
po/nn/: ktp-contactlist.po
po/pa/: ktp-contactlist.po
po/pl/: ktp-contactlist.po
po/pt/: ktp-contactlist.po
po/pt_BR/: ktp-contactlist.po
po/ro/: ktp-contactlist.po
po/ru/: ktp-contactlist.po
po/sk/: ktp-contactlist.po
po/sl/: ktp-contactlist.po
po/sr/: ktp-contactlist.po
po/sr@ijekavian/: ktp-contactlist.po
po/sr@ijekavianlatin/: ktp-contactlist.po
po/sr@latin/: ktp-contactlist.po
po/sv/: ktp-contactlist.po
po/tr/: ktp-contactlist.po
po/ug/: ktp-contactlist.po
po/uk/: ktp-contactlist.po
po/vi/: ktp-contactlist.po
po/zh_CN/: ktp-contactlist.po
po/zh_TW/: ktp-contactlist.po
tooltips/: contacttooltip.cpp  contacttooltip.h  contacttooltip.ui  ktooltip.cpp  ktooltip.h  ktooltipwindow.cpp  ktooltipwindow_p.h  persontooltip.cpp  persontooltip.h  persontooltip.ui  tooltipmanager.cpp  tooltipmanager.h
